{
  "sourceLanguage" : "en",
  "strings" : {
    "2x Speed Low Quality" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "低品質2倍速"
          }
        }
      }
    },
    "4x Speed Low Quality" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "低品質4倍速"
          }
        }
      }
    },
    "Add" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "追加"
          }
        }
      }
    },
    "Are you sure to remove all of the selected screen records?" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "選択された画面録画を全て削除しても良いですか？"
          }
        }
      }
    },
    "Are you sure to remove this screen record?" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "この画面録画を削除しても良いですか？"
          }
        }
      }
    },
    "Encode" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "エンコード"
          }
        }
      }
    },
    "Encoder operations" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "エンコード操作"
          }
        }
      }
    },
    "Encoding progress" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "エンコード進捗"
          }
        }
      }
    },
    "Encoding settings" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "エンコード設定"
          }
        }
      }
    },
    "Enter a new note name" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新規メモの名前を入力してください"
          }
        }
      }
    },
    "Enter the note text here..." : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ここにメモの内容を入力してください..."
          }
        }
      }
    },
    "Enter the summary..." : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "要約を入力..."
          }
        }
      }
    },
    "List of screen records" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "画面録画一覧"
          }
        }
      }
    },
    "Low Quality" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "低品質"
          }
        }
      }
    },
    "Name" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "名前"
          }
        }
      }
    },
    "Notes" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "メモ"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "Ongoing screen record" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "進行中の画面録画"
          }
        }
      }
    },
    "Preset" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プリセット"
          }
        }
      }
    },
    "Preview" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プレビュー"
          }
        }
      }
    },
    "Remove" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "削除"
          }
        }
      }
    },
    "Saved screen records" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存済みの画面録画"
          }
        }
      }
    },
    "The note with the specified name already exists!" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "この名前のメモはすでに存在します！"
          }
        }
      }
    },
    "This screen record is ongoing!" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "この画面録画は進行中です！"
          }
        }
      }
    }
  },
  "version" : "1.0"
}