...

    let player: AVPlayer = createPreviewPlayer(
      masterPlaylistRemoteURL: masterPlaylistRemoteURL
    )

    VideoPlayer(player: player)
      .accessibilityIdentifier("PreviewVideoPlayer")
      .onDisappear {
        player.pause()
        Task {
          try await server?.close()
        }
      }
...
