...
          NavigationLink {
            EmptyView()
          } label: {
            Label(recordNoteShortName, systemImage: "doc")
          }
        }
        .accessibilityIdentifier("RecordNoteEntryButton")
      }

      Button {
        isAskingNewNoteShortName = true
      } label: {
        Label("Add", systemImage: "doc.badge.plus")
...
